--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,13 @@ h4{
     text-align: center;
     color: yellow;
 }
+.imag{
+    margin: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
 table{
     margin-top: 50px;
     caption-side: bottom;
