--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,9 @@ h4{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
 }
 table{
     margin-top: 50px;
